# bearable-csv-analyzer

./: Cargo.toml
src/: chart.js  main.rs  provider.rs
src/model/: data_manager.rs  date_map.rs  parser.rs  time_of_day.rs
src/model/symptoms/: symptom.rs
src/view_model/: scatter_plot.rs
